--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<div class="main">
 		<header>
-				<img src="http://buhgalter51.ru/upload/onsite-logo.png" alt="smthng" class="logo">
+				<img src="http://buhgalter51.ru/upload/onsite-logo.png" alt="logo" class="logo">
 		</header>
 		<div class="text">
 			<h1>SOS-Бухгалтерия</h1>
