--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<img src="images/onsite-logo.png" alt="logo" class="logo">
 		</header>
 		<div class="text">
-			<h1>SOS-Бухгалтерия</h1>
+			<h1>Бухгалтерия</h1>
 			<h2>Организация, оказывающая бухгалтерские услуги в России и Финляндии</h2>
 			<p>Мы предлагаем услуги бухгалтерского учета и расчета налогов.
 			</p>
