--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="text">
 			<h1>Бухгалтерия</h1>
 			<h2>Организация, оказывающая бухгалтерские услуги в России и Финляндии</h2>
-			<p>Мы предлагаем услуги бухгалтерского учета и расчета налогов.
+			<p>Мы предлагаем услуги по регистрации компаний, ведению бухгалтерского учёта и расчету налогов.
 			</p>
 			<p>
 			В нашей
