--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	
 	<div class="main">
 		<header>
-				<img src="images/onsite-logo.png" alt="logo" class="logo">
+				<img src="http://buhgalter51.ru/upload/onsite-logo.png" alt="smthng" class="logo">
 		</header>
 		<div class="text">
-			<h1>Бухгалтерия</h1>
+			<h1 style="margin-top: 0px;">Бухгалтерия</h1>
 			<h2>Организация, оказывающая бухгалтерские услуги в России и Финляндии</h2>
 			<p>Мы предлагаем услуги по регистрации компаний, ведению бухгалтерского учёта и расчету налогов.
 			</p>
