--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<div class="main">
 		<header>
-				<img src="http://buhgalter51.ru/upload/onsite-logo.png" alt="smthng" class="logo">
+				<img src="images/onsite-logo.png" alt="smthng" class="logo">
 		</header>
 		<div class="text">
 			<h1 style="margin-top: 0px;">Бухгалтерия</h1>
