--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</a>
 				</div>
 				<div class="icon-container facebook">
-				<a href="https://www.facebook.com/profile.php?id=100004756264843">
+				<a href="https://www.facebook.com/SOS-бухгалтерия-2254080984668114/">
 					<img class="icon" alt="smthng" src="images/FB-icon.png">
 				</a>
 				</div>
