--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</a>
 				</div>
 				<div class="icon-container VK">
-				<a href="https://vk.com/id95801325">
+				<a href="https://vk.com/club36321156">
 					<img class="icon" alt="smthng" src="images/VK-icon.png">
 				</a>
 				</div>
