--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</header>
 		<div class="text">
 			<h1 style="margin-top: 0px;">Бухгалтерия</h1>
-			<h2>Организация, оказывающая бухгалтерские услуги в России и Финляндии</h2>
+			<h2>Организация, оказывающая бухгалтерские услуги в России</h2>
 			<p>Мы предлагаем услуги по регистрации компаний, ведению бухгалтерского учёта и расчету налогов.
 			</p>
 			<p>
